--- a/src/Polidog/BackworkBundle/Resources/views/Default/index.html.twig
+++ b/src/Polidog/BackworkBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,12 @@
-Hello {{ name }}!
+{% extends "PolidogBackworkBundle::base.html.twig" %}
+{% block container %}
+    <!-- Main component for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <h1>BackWork</h1>
+        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+        <p>To see the difference between static and fixed top navbars, just scroll.</p>
+        <p>
+            <a class="btn btn-lg btn-primary" href="{{ path("polidog_backwork_default_index") }}" role="button">Sign up</a>
+        </p>
+    </div>
+{% endblock %}
