--- a/src/Polidog/BackworkBundle/Resources/views/menu.html.twig
+++ b/src/Polidog/BackworkBundle/Resources/views/menu.html.twig
@@ -29,9 +29,31 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <li class="active"><a href="./">Static top</a></li>
-                <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+                        <div class="dropdown-menu" style="padding:17px;">
+                            <form class="form-horizontal" id="formLogin" role="form">
+                                <div class="form-group">
+                                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                                    <div class="col-sm-10">
+                                        <input name="username" id="username" type="text" placeholder="ユーザー名">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputPassword" class="col-sm-10 control-label">パスワード</label>
+                                    <div class="col-sm-10">
+                                        <input name="password" id="password" type="password" placeholder="ユーザー名">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </li>
+                {% else %}
+                    <li><a href="../navbar/">Default</a></li>
+                    <li class="active"><a href="./">Static top</a></li>
+                    <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                {% endif %}
             </ul>
         </div><!--/.nav-collapse -->
     </div>
