--- a/src/Polidog/BackworkBundle/Resources/views/menu.html.twig
+++ b/src/Polidog/BackworkBundle/Resources/views/menu.html.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">BackWork</a>
+            <a class="navbar-brand" href="{{ path("polidog_backwork_default_index") }}">BackWork</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -29,30 +29,15 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
-                        <div class="dropdown-menu" style="padding:17px;">
-                            <form class="form-horizontal" id="formLogin" role="form">
-                                <div class="form-group">
-                                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-                                    <div class="col-sm-10">
-                                        <input name="username" id="username" type="text" placeholder="ユーザー名">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputPassword" class="col-sm-10 control-label">パスワード</label>
-                                    <div class="col-sm-10">
-                                        <input name="password" id="password" type="password" placeholder="ユーザー名">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
+                {% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li>{{ render(controller('FOSUserBundle:Security:login')) }}</li>
                 {% else %}
-                    <li><a href="../navbar/">Default</a></li>
-                    <li class="active"><a href="./">Static top</a></li>
-                    <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown">{{ app.user.username }} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path('fos_user_security_login') }}">ログアウト</a></li>
+                        </ul>
+                    </li>
                 {% endif %}
             </ul>
         </div><!--/.nav-collapse -->
